Fix an element overflow issue

--- a/src/styles/2-layouts/layouts-dir.sass
+++ b/src/styles/2-layouts/layouts-dir.sass
@@ -25,10 +25,10 @@
       display: grid
       grid-template-areas: "burger" "nav-container"
       grid-template-rows: 1fr 2fr
+      width: 98vw
 
     .nav-container
       grid-area: nav-container
-      width: 100%
 
     
     .l-menu
@@ -56,6 +56,7 @@
 .l-card-container
   display: grid
   grid-template-rows: 1fr
+  grid-gap: 1rem
   overflow: scroll
 
   .display-card
@@ -64,13 +65,16 @@
 
     &:nth-child(odd)
       grid-template-columns: 1fr 8.5fr
-
+         
       .card-content
         grid-column: 2/3
-        width: 100%
       
-      .card-img
-        // grid-column: 
+      .card-image
+        grid-column: 1/2
+        height: 100%
+
+        // position: relative
+        // top: 10%
 
     &:nth-child(even)
       grid-template-columns: 8.5fr 1fr
