--- a/src/styles/3-modules/__cards-display.sass
+++ b/src/styles/3-modules/__cards-display.sass
@@ -9,7 +9,6 @@
 .l-card-container
 
   .display-card
-
     &:nth-child(1n)
       +lightsaber(#4df) 
 
@@ -18,3 +17,7 @@
 
     &:nth-child(2n)
       +lightsaber(#F00) 
+
+  
+  .card-image
+    background-image: url('./assets/imgs/starwars.jpeg')
